--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,9 @@
 body{
 	background-color: white;
 }
-
+pre{
+	margin: 5px;
+}
 .navbar{
 	background-color: #673ab7;
 	position: relative;
@@ -11,21 +13,109 @@ body{
 	color: white;
 	margin: 20px;
 }
-.play{
-	background: url('images/play.svg') no-repeat;
-}
-.pause{
-	background: url('images/pause.svg') no-repeat;
-}
 
-#playerControls > h3 > .glyphicon{
+#playerControls > h3 > .fa{
 	color: #673AB7;
 }
 
 .navbar > h2:hover {
   content: '音楽プレーヤ';
 }
-
+.panel{
+	margin-bottom: 0;
+}
+.panel-primary {
+	border-color: #4527A0;
+}
 .panel-primary > .panel-heading{
 	background-color: #4527A0;
+	border-color: #4527A0;
+}
+
+/*Seekbar Styling*/
+
+input[type=range].seekbar {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 8.65px 0;
+}
+input[type=range].seekbar:focus {
+  outline: none;
+}
+input[type=range].seekbar::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 18.7px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #673ab7;
+  border-radius: 0px;
+  border: 0.4px solid #010101;
+}
+input[type=range].seekbar::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -9.05px;
+}
+input[type=range].seekbar:focus::-webkit-slider-runnable-track {
+  background: #7446c4;
+}
+input[type=range].seekbar::-moz-range-track {
+  width: 100%;
+  height: 18.7px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #673ab7;
+  border-radius: 0px;
+  border: 0.4px solid #010101;
+}
+input[type=range].seekbar::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range].seekbar::-ms-track {
+  width: 100%;
+  height: 18.7px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range].seekbar::-ms-fill-lower {
+  background: #5c34a4;
+  border: 0.4px solid #010101;
+  border-radius: 0px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range].seekbar::-ms-fill-upper {
+  background: #673ab7;
+  border: 0.4px solid #010101;
+  border-radius: 0px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range].seekbar::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  height: 18.7px;
+}
+input[type=range].seekbar:focus::-ms-fill-lower {
+  background: #673ab7;
+}
+input[type=range].seekbar:focus::-ms-fill-upper {
+  background: #7446c4;
 }
