--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,14 @@ pre{
 	border-color: #4527A0;
 }
 
+/*Volume Slide Styling*/
+
+input#volume{
+	-webkit-appearance: slider-vertical;
+	writing-mode: br-lr;
+}
+
+
 /*Seekbar Styling*/
 
 input[type=range].seekbar {
