--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 body{
 	background-color: white;
+	font-family: 'Open Sans', sans-serif;
 }
 pre{
 	margin: 5px;
@@ -9,20 +10,29 @@ pre{
 	position: relative;
 	border-radius: 0;
 }
-.navbar > h2{
+.navbar > h1{
 	color: white;
 	margin: 20px;
 }
 
-#playerControls > h3 > .fa{
+h3 > .fa{
 	color: #673AB7;
 }
 
-.navbar > h2:hover {
+
+/*.navbar > h1:hover {
+  content: '';
+  display: none;
+}*/
+
+/*.navbar > h1:hover:after {
   content: '音楽プレーヤ';
-}
+  display: none;
+}*/
+
 .panel{
 	margin-bottom: 0;
+	border-radius: 0;
 }
 .panel-primary {
 	border-color: #4527A0;
@@ -30,15 +40,42 @@ pre{
 .panel-primary > .panel-heading{
 	background-color: #4527A0;
 	border-color: #4527A0;
+	border-radius: 0;
 }
+
+i:hover{
+	/*background-color: #FFF59D;*/
+	background-color: #D1C4E9;
+	box-shadow: 1px 1px 1px black;
+}
+
+.btn{
+	border-radius: 0;
+}
+
+#belowNav{
+	margin: 0 auto;
+	padding: 25px 100px;
+}
+
 
 /*Volume Slide Styling*/
 
-input#volume{
-	-webkit-appearance: slider-vertical;
-	writing-mode: br-lr;
+#volume{
+	width: 50%;
+	display: inline-block;
+	padding: 0 5px;
 }
 
+/*#volume > h3 > .fa{
+	color: #673AB7;
+}*/
+
+/*input[type=range]#volume{
+	-webkit-appearance: slider-vertical;
+	writing-mode: br-lr;
+	background-color: #4527A0;
+}*/
 
 /*Seekbar Styling*/
 
@@ -64,7 +101,8 @@ input[type=range].seekbar::-webkit-slider-thumb {
   border: 1px solid #000000;
   height: 36px;
   width: 16px;
-  border-radius: 3px;
+  /*border-radius: 3px;*/
+  border-radius: 0;
   background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
@@ -87,7 +125,8 @@ input[type=range].seekbar::-moz-range-thumb {
   border: 1px solid #000000;
   height: 36px;
   width: 16px;
-  border-radius: 3px;
+  /*border-radius: 3px;*/
+  border-radius: 0;
   background: #ffffff;
   cursor: pointer;
 }
@@ -116,7 +155,8 @@ input[type=range].seekbar::-ms-thumb {
   border: 1px solid #000000;
   height: 36px;
   width: 16px;
-  border-radius: 3px;
+  /*border-radius: 3px;*/
+  border-radius: 0;
   background: #ffffff;
   cursor: pointer;
   height: 18.7px;
